# pushshift-user-dumper

./: .gitignore  Cargo.toml  build.rs
src/: analyzer.rs  main.rs  serializer.rs
src/text/: mod.rs  slangwords.txt  text_item.rs
