[package]
name = "poo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poo"
path = "src/main.rs"

[[bin]]
name = "analyzer"
path = "src/analyzer.rs"

[dependencies]
bincode = "1.3.3"
dashmap = { version = "5.4.0", features = ["serde"] }
kdam = "0.2.7"
lazy_static = "1.4.0"
memchr = "2.5.0"
nlprule = "0.6.4"
rayon = "1.6.0"
ruzstd = "0.3.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
zstd = "0.12.0"

[build-dependencies]
http_req = "0.9.0"
